// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder array operations generates add patch for field inside array items 1`] = `
[
  {
    "fieldName": "items[*].newField",
    "patch": {
      "op": "add",
      "path": "/properties/items/items/properties/newField",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder array operations generates move patch for renamed field inside array items 1`] = `
[
  {
    "fieldName": "items[*].newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/items/items/properties/oldName",
      "op": "move",
      "path": "/properties/items/items/properties/newName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder array operations generates remove patch for field inside array items 1`] = `
[
  {
    "fieldName": "items[*].fieldA",
    "patch": {
      "op": "remove",
      "path": "/properties/items/items/properties/fieldA",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder array operations generates replace patch for array when only array metadata changes 1`] = `
[
  {
    "fieldName": "items",
    "patch": {
      "op": "replace",
      "path": "/properties/items",
      "value": {
        "description": "New description",
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "New description",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder array operations generates replace patch for field inside array items 1`] = `
[
  {
    "fieldName": "items[*].name",
    "patch": {
      "op": "replace",
      "path": "/properties/items/items/properties/name",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "initial",
        "property": "default",
        "to": "modified",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder array operations generates replace patch for items when array items type changes 1`] = `
[
  {
    "fieldName": "items[*]",
    "patch": {
      "op": "replace",
      "path": "/properties/items/items",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`PatchBuilder array operations generates two patches when both array metadata and items type change 1`] = `
[
  {
    "fieldName": "items",
    "patch": {
      "op": "replace",
      "path": "/properties/items",
      "value": {
        "description": "New description",
        "items": {
          "default": 0,
          "type": "number",
        },
        "type": "array",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "New description",
      },
    ],
    "typeChange": undefined,
  },
  {
    "fieldName": "items[*]",
    "patch": {
      "op": "replace",
      "path": "/properties/items/items",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;
